--- a/Infrastructure/EDergiAPI.Persistence/EDergiAPI.Persistence.csproj
+++ b/Infrastructure/EDergiAPI.Persistence/EDergiAPI.Persistence.csproj
@@ -18,12 +18,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.7" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\EDergiAPI.Application\EDergiAPI.Application.csproj" />
+    <ProjectReference Include="..\..\Core\EDergiAPI.Domain\EDergiAPI.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
