--- a/Presentation/EDergiAPI.API/appsettings.json
+++ b/Presentation/EDergiAPI.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=89.252.137.8\\MSSQLSERVER2019;Initial Catalog=DB_EDergi;Persist Security Info=True;User ID=EDergi_Usr;Password=bHuHa6OHc0vbtzM;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
+    "SqlServer": "Data Source=89.252.137.8\\MSSQLSERVER2019;Initial Catalog=DB_EDergi;Persist Security Info=True;User ID=EDergi_Usr;Password=bHuHa6OHc0vbtzM;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
