--- a/Presentation/EDergiAPI.API/appsettings.json
+++ b/Presentation/EDergiAPI.API/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  // 🔐 JWT TOKEN AYARI
+  "Jwt": {
+    "Key": "BurayaGuvenliBirAnahtarYaz",
+    "Issuer": "EDergiAPI",
+    "Audience": "EDergiAPIUsers"
+  }
 }
