--- a/Presentation/EDergiAPI.API/appsettings.json
+++ b/Presentation/EDergiAPI.API/appsettings.json
@@ -12,8 +12,8 @@
 
   // 🔐 JWT TOKEN AYARI
   "Jwt": {
-    "Key": "BurayaGuvenliBirAnahtarYaz",
-    "Issuer": "EDergiAPI",
-    "Audience": "EDergiAPIUsers"
+    "Key": "supersecretkey_which_is_very_long_and_secure!!",
+    "Issuer": "edergiapi",
+    "Audience": "edergiapi_user"
   }
 }
