--- a/Presentation/EDergi.WebPageUI/appsettings.json
+++ b/Presentation/EDergi.WebPageUI/appsettings.json
@@ -9,6 +9,11 @@
     "Password": "Zehra123+",
     "From": "1031510016@erciyes.edu.tr"
   },
+  
+    "FileUpload": {
+      "UploadPath": "wwwroot/images"
+    
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
