--- a/Presentation/EDergi.WebPageUI/EDergi.WebPageUI.csproj
+++ b/Presentation/EDergi.WebPageUI/EDergi.WebPageUI.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\..\Infrastructure\EDergi.Infrastructure\EDergi.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\ViewComponents\" />
+  </ItemGroup>
+
 </Project>
